[project]
name = "aquaponicspages"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "佐藤剛", email = "tsuyoshi.sato@orsc.co.jp" }
]
dependencies = [
    "streamlit>=1.41.1",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/aquaponicspages"]
